dhall/tests/type-errors/unit/RecordProjectionNotRecord.txt
Type error: error: ProjectionMustBeRecord
 --> <current file>:1:0
  |
1 | True.{ x }
  | ^^^^^^^^^^ ProjectionMustBeRecord
  |
